--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,15 +12,21 @@
         tools:layout="@layout/fragment_categories" >
         <action
             android:id="@+id/action_categoriesFragment_to_postsFragment"
-            app:destination="@id/postsFragment" />
+            app:destination="@id/postsFragment" >
+            <argument
+                android:name="@string/category_id"
+                android:defaultValue="1"
+                app:argType="integer" />
+
+        </action>
     </fragment>
     <fragment
         android:id="@+id/postsFragment"
         android:name="com.teamvii.news.fragments.PostsFragment"
         android:label="fragment_posts"
-        tools:layout="@layout/fragment_posts" >
+        tools:layout="@layout/fragment_posts">
         <argument
-            android:name="categoryId"
+            android:name="@string/category_id"
             android:defaultValue="1"
             app:argType="integer" />
     </fragment>
