--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -7,18 +7,27 @@
     tools:context=".fragments.PostsFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <Spinner
+        android:id="@+id/pagesSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/postsRecycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/postsRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:scrollbars="vertical"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pagesSpinner"
         tools:listitem="@layout/post_item" />
 
 </android.support.constraint.ConstraintLayout>
